--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -55,7 +55,7 @@
                                 ></a>
                         </li>
                         <li class="nav-item d-none d-sm-inline-block">
-                            <a href="index.xhtml" class="nav-link">Home</a>
+                            <a href="index.bitlab" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item d-none d-sm-inline-block">
                             <a href="#" class="nav-link">Contact</a>
