--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -189,9 +189,9 @@
                                 <ui:fragment rendered="#{testMB.ROL eq 'Admin'}">
                                     <li class="nav-header">ADMIN LEVEL EXAMPLE</li>
                                     <li class="nav-item">
-                                        <a href="docente.bitlab" class="nav-link">
+                                        <a href="#" class="nav-link">
                                             <i class="fas fa-circle nav-icon"></i>
-                                            <p>Docente</p>
+                                            <p>Level 1</p>
                                         </a>
                                     </li>
                                     <li class="nav-item has-treeview">
