Cambio de apariencia Perfil

--- a/BITLAB-war/web/profile.xhtml
+++ b/BITLAB-war/web/profile.xhtml
@@ -48,26 +48,23 @@
                             <!-- Left col -->
                             <section class="col-lg-12">
                                 <!-- Custom tabs (Charts with tabs)-->
-                                <h:form role="form">
-                                    <div class="card card-primary" style="margin: 0 40% 30px 40%;">
-                                        <div class="card-header" style="background-color: #6f42c1">
-                                            <p:graphicImage name="dist/img/user2-160x160.jpg" alt=""/>
-                                            <!--                                            <div class="card-tools">
-                                                                                            <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i></button>
-                                                                                        </div>-->
-                                        </div>
-                                        <div class="card-body">
-                                            <div class="form-group">
-                                                <h:outputText value="#{testMB.nUsuario}" />
-
-                                            </div>
-                                            <div class="form-group">
-                                                <h:outputText value="#{testMB.ROL}" />
-
-                                            </div>
-                                            <div class="form-group">
-
-                                                <p:fileUpload label="Foto" mode="simple" skinSimple="true"/>
+                                <h:form role="form" id="picture">
+                                    <div class="card card-primary" style="margin: 0 10% 30px 10%">
+                                        <div class="card-body" style="background-color: #6f42c1">
+                                            <div class="row">
+                                                <div class="col-xl-4" style="background-color: #333">
+                                                    <div class="form-group" style="text-align: center; padding: 0">
+                                                        <p:graphicImage name="dist/img/user2-160x160.jpg" alt="" width="250" style="padding: 5%"/>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xl-8" style="background-color: #fff">
+                                                    <div class="form-group" style="padding-left: 20px; line-height: 300%">
+                                                        <b><h:outputText value="#{usuarioManaged.nombre}" style="font-size: 30px"/></b> <br/>
+                                                        <h:outputText value="#{usuarioManaged.rol}" style="font-size: 30px"/> <br/>
+                                                        <p:fileUpload label="Subir nueva foto" mode="simple" skinSimple="true" style="margin-top: 20px"/> <br/>
+                                                        <p:commandButton value="Actualizar" ajax="true" update=":picture"/> <br/>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
