--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -198,50 +198,28 @@
                                         <a href="#" class="nav-link">
                                             <i class="nav-icon fas fa-circle"></i>
                                             <p>
-                                                Level 1
+                                                Gestion De Aplicantes
                                                 <i class="right fas fa-angle-left"></i>
                                             </p>
                                         </a>
                                         <ul class="nav nav-treeview">
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link">
+                                                <a href="aplicante.bitlab" class="nav-link">
                                                     <i class="far fa-circle nav-icon"></i>
-                                                    <p>Level 2</p>
+                                                    <p>Aplicantes</p>
                                                 </a>
                                             </li>
-                                            <li class="nav-item has-treeview">
-                                                <a href="#" class="nav-link">
+
+                                            <li class="nav-item">
+                                                <a href="preseleccion.bitlab" class="nav-link">
                                                     <i class="far fa-circle nav-icon"></i>
-                                                    <p>
-                                                        Level 2
-                                                        <i class="right fas fa-angle-left"></i>
-                                                    </p>
+                                                    <p>Pre-Seleccionados</p>
                                                 </a>
-                                                <ul class="nav nav-treeview">
-                                                    <li class="nav-item">
-                                                        <a href="#" class="nav-link">
-                                                            <i class="far fa-dot-circle nav-icon"></i>
-                                                            <p>Level 3</p>
-                                                        </a>
-                                                    </li>
-                                                    <li class="nav-item">
-                                                        <a href="#" class="nav-link">
-                                                            <i class="far fa-dot-circle nav-icon"></i>
-                                                            <p>Level 3</p>
-                                                        </a>
-                                                    </li>
-                                                    <li class="nav-item">
-                                                        <a href="#" class="nav-link">
-                                                            <i class="far fa-dot-circle nav-icon"></i>
-                                                            <p>Level 3</p>
-                                                        </a>
-                                                    </li>
-                                                </ul>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link">
+                                                <a href="seleccionado.bitlab" class="nav-link">
                                                     <i class="far fa-circle nav-icon"></i>
-                                                    <p>Level 2</p>
+                                                    <p>Seleccionados</p>
                                                 </a>
                                             </li>
                                         </ul>
@@ -340,7 +318,7 @@
                 <div class="content-wrapper">
 
                     <ui:insert name="content">
-                        
+
                     </ui:insert>      
                 </div>
 
